# user/routes/user.js
@@ -1,7 +1,8 @@
 const express = require('express');
 const router = express.Router();
 const userController = require("../controllers/userController");
-const { body, validationResult,query } = require('express-validator');
+const { body, validationResult,query} = require('express-validator');
+const {FileUpload} =  require('../user/user');
 
 
 
@@ -10,29 +11,6 @@ router.post('/registerUser', [
     body('personalDetail.fullName').isString().notEmpty().trim().escape(),
     body('personalDetail.email').isString().notEmpty().trim().escape(),
     body('personalDetail.phoneNumber').isString().notEmpty().trim().escape(),
-    body('payments').exists(),
-    body('payments.*.cardNumber').isString().notEmpty().trim().escape(),
-    body('payments.*.expiry').isString().notEmpty().trim().escape(),
-    body('payments.*.ccv').isString().notEmpty().trim().escape(),
-    body('payments.*.cardHolderName').isString().notEmpty().trim().escape(),
-    body('payments.*.postalCode').isString().notEmpty().trim().escape(),
-    body('travelCompanions').exists(),
-    body('travelCompanions.*.firstName').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.secondName').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.nickname').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.email').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.phoneNumber').isString().notEmpty().trim().escape(),
-    body('travelDocuments').exists(),
-    body('travelDocuments.*.fullName').isString().notEmpty().trim().escape(),
-    body('travelDocuments.*.passportNumber').isString().notEmpty().trim().escape(),
-    body('travelDocuments.*.expiryDate').isString().notEmpty().trim().escape(),
-    body('travelDocuments.*.countryOfBirth').isString().notEmpty().trim().escape(),
-    body('bookingHistory').exists(),
-    body('bookingHistory.*').isString().notEmpty().trim().escape(),
-    body('qrCode').exists(),
-    body('qrCode.*').isString().notEmpty().trim().escape(),
-
-    
 ], (req, res, next) => {
     const errors = validationResult(req);
     if(!errors.isEmpty()) {
@@ -47,28 +25,6 @@ router.put('/updateUser', [
     body('personalDetail.fullName').isString().notEmpty().trim().escape(),
     body('personalDetail.email').isString().notEmpty().trim().escape(),
     body('personalDetail.phoneNumber').isString().notEmpty().trim().escape(),
-    body('payments').exists(),
-    body('payments.*.cardNumber').isString().notEmpty().trim().escape(),
-    body('payments.*.expiry').isString().notEmpty().trim().escape(),
-    body('payments.*.ccv').isString().notEmpty().trim().escape(),
-    body('payments.*.cardHolderName').isString().notEmpty().trim().escape(),
-    body('payments.*.postalCode').isString().notEmpty().trim().escape(),
-    body('travelCompanions').exists(),
-    body('travelCompanions.*.firstName').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.secondName').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.nickname').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.email').isString().notEmpty().trim().escape(),
-    body('travelCompanions.*.phoneNumber').isString().notEmpty().trim().escape(),
-    body('travelDocuments').exists(),
-    body('travelDocuments.*.fullName').isString().notEmpty().trim().escape(),
-    body('travelDocuments.*.passportNumber').isString().notEmpty().trim().escape(),
-    body('travelDocuments.*.expiryDate').isString().notEmpty().trim().escape(),
-    body('travelDocuments.*.countryOfBirth').isString().notEmpty().trim().escape(),
-    body('bookingHistory').exists(),
-    body('bookingHistory.*').isString().notEmpty().trim().escape(),
-    body('qrCode').exists(),
-    body('qrCode.*').isString().notEmpty().trim().escape(),
-
     
 ], (req, res, next) => {
     const errors = validationResult(req);
@@ -87,6 +43,150 @@ router.get('/getUser',[
     }
     next();
 }, userController.GetUser);
+
+
+router.post('/AddUserToTravelCompanionList',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+    body('firstName').isString().notEmpty().trim().escape(),
+    body('secondName').isString().notEmpty().trim().escape(),
+    body('nickname').isString().notEmpty().trim().escape(),
+    body('email').isString().notEmpty().trim().escape(),
+    body('phoneNumber').isString().notEmpty().trim().escape(),
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.AddUserToTravelCompanionList);
+
+router.get('/GetTravelCompanionList',[
+    query('firebaseid').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.GetTravelCompanionList)
+router.delete('/DeleteTravelCompanionEntry',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+    query('email').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.DeleteTravelCompanionEntry)
+
+
+router.post('/AddPayementMethod',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+     body('cardNumber').isString().notEmpty().trim().escape(),
+     body('expiry').isString().notEmpty().trim().escape(),
+     body('ccv').isString().notEmpty().trim().escape(),
+     body('cardHolderName').isString().notEmpty().trim().escape(),
+     body('postalCode').isString().notEmpty().trim().escape(),
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.AddPayementMethod);
+
+router.get('/GetPayementMethods',[
+    query('firebaseid').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.GetPayementMethods)
+
+router.delete('/DeletePayementMethod',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+    query('id').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.DeletePayementMethod)
+
+
+
+router.post('/AddTravelDocument',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+    body('fullName').isString().notEmpty().trim().escape(),
+    body('passportNumber').isString().notEmpty().trim().escape(),
+    body('expiryDate').isString().notEmpty().trim().escape(),
+    body('countryOfBirth').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.AddTravelDocument);
+
+router.get('/GetTravelDocuments',[
+    query('firebaseid').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.GetTravelDocuments)
+
+router.delete('/DeleteTravelDocument',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+    query('id').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.DeleteTravelDocument)
+
+
+router.post('/AddQrData',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+    //body('flightNumber').isString().notEmpty().trim().escape(),
+    FileUpload
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.AddQrData);
+
+router.get('/GetQrDatas',[
+    query('firebaseid').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.GetQrDatas)
+
+router.delete('/DeleteQrData',[
+    query('firebaseid').isString().notEmpty().trim().escape(),
+    query('id').isString().notEmpty().trim().escape()
+],(req, res, next) => {
+    const errors = validationResult(req);
+    if(!errors.isEmpty()) {
+        return res.status(400).json({errors: errors.array()});
+    }
+    next();
+},userController.DeleteQrData)
 
 
 module.exports = router;
